chore: add `/v1` to all URI paths (#95)
This commit adds a `/v1` prefix to all URI paths to version our
API. This will be useful for several reasons:
- allows us to gracefully accommodate a v2 api which uses github's graphql API
- allows us to craft tight firewall rules (currently, we search for whether a
URI path contains `/sites` or `/auth`, which would allow nonsense URI paths like
`/authors`)
